--- a/xkb_layout/Makefile
+++ b/xkb_layout/Makefile
@@ -6,8 +6,11 @@ default : install
 install: bepo_code.xkb
 	-mkdir ~/.xkb
 	-mkdir ~/.xkb/symbols
-	-mkdir ~/.xkb/map
-	cp -f bepo_code.map ~/.xkb/map
+	cp -f bepo_code.xkb ~/.xkb/symbols
+
+
+	# -mkdir ~/.xkb/map
+	# cp -f bepo_code.map ~/.xkb/map
 	setxkbmap -I ~/.xkb bepo_code.xkb -print | xkbcomp -I${HOME}/.xkb/ - ${DISPLAY}
 
 remove:
