updating as submodule for dotfiles project

--- a/xkb_layout/Makefile
+++ b/xkb_layout/Makefile
@@ -1,16 +1,17 @@
 
-.PHONY: install
+#.PHONY: install
 
 default : install
 
-install: bepo_code.xkb
-	-mkdir ~/.xkb
-	-mkdir ~/.xkb/symbols
-	cp -f bepo_code.xkb ~/.xkb/symbols
-
-
+install:
+	mkdir -p ~/.xkb/symbols
+	#cp -f bepo_code.xkb ~/.xkb/symbols
 	# -mkdir ~/.xkb/map
 	# cp -f bepo_code.map ~/.xkb/map
-	setxkbmap -I ~/.xkb bepo_code.xkb -print | xkbcomp -I${HOME}/.xkb/ - ${DISPLAY}
+	-mkdir ${HOME}.xkb
+	-mkdir ${HOME}.xkb/symbols
+	cp -f bepo_code.xkb ~/.xkb/symbols
+	setxkbmap -I ${HOME}.xkb bepo_code.xkb -print | xkbcomp -I${HOME}/.xkb/ - ${DISPLAY}
+	#setxkbmap -I ${PWD}/xkb bepo_code.xkb -print | xkbcomp -I${PWD}/xkb/ - ${DISPLAY}
 
 remove:
